--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-  <link rel="alternate" href="/default" title="Title Here">
+  <link rel="alternate" href="/default" title="Charles's Blog">
 
 
 
