--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 
 
 
-    <title> Title Here - </title>
+    <title> Charles's Blog </title>
   </head>
 
   <body>
     <div id="page">
       <header id="masthead"><div class="site-header-inner">
     <h1 class="site-title">
-        <a href="/." class="logo">Title Here</a>
+        <a href="/." class="logo">Charles's Blog</a>
     </h1>
 
     <nav id="nav-top">
@@ -190,7 +190,7 @@
     
         2014 -
     
-    2018
+    2025
     <span class="footer-author">Charles Croft.</span>
     <span class="power-by">
         由 <a class="hexo-link" href="https://hexo.io/">Hexo</a> and <a class="theme-link" href="https://github.com/frostfan/hexo-theme-polarbear">Polar Bear</a> 强力驱动
